--- a/lang/main-bg.json
+++ b/lang/main-bg.json
@@ -592,7 +592,7 @@
         "answer": "Вдигни",
         "audioCallTitle": "Входящ разговор",
         "decline": "Отхвърляне",
-        "productLabel": "от Jitsi Meet",
+        "productLabel": "от ClubApp Meet",
         "videoCallTitle": "Входящ видео разговор"
     },
     "info": {
