--- a/lang/main-et.json
+++ b/lang/main-et.json
@@ -303,7 +303,7 @@
         "answer": "Vasta",
         "audioCallTitle": "Sissetulev kõne",
         "decline": "Lõpeta",
-        "productLabel": "Jitsi",
+        "productLabel": "ClubApp",
         "videoCallTitle": "Sissetulev videokõne"
     },
     "info": {
