--- a/lang/main-hr.json
+++ b/lang/main-hr.json
@@ -60,7 +60,7 @@
     },
     "calendarSync": {
         "addMeetingURL": "Dodaj poveznicu za sastanak",
-        "confirmAddLink": "Želiš li dodati Jitsi poveznicu ovom događaju?",
+        "confirmAddLink": "Želiš li dodati ClubApp poveznicu ovom događaju?",
         "error": {
             "appConfiguration": "Integracija kalendara nije ispravno konfigurirana.",
             "generic": "Došlo je do greške. Provjeri postavke kalendara ili pokušaj aktualizirati kalendar.",
@@ -444,7 +444,7 @@
         "answer": "Odgovori",
         "audioCallTitle": "Dolazni poziv",
         "decline": "Odbij",
-        "productLabel": "od Jitsi Meet",
+        "productLabel": "od ClubApp Meet",
         "videoCallTitle": "Dolazni videopoziv"
     },
     "info": {
@@ -691,7 +691,7 @@
         "noiseSuppressionFailedTitle": "Nauspjelo pokretanje suzbijanja šumova",
         "noiseSuppressionNoTrackDescription": "Najprije isključi zvuk tvog mikrofona.",
         "noiseSuppressionStereoDescription": "Suzbijanja šumova stereo zvuka trenutačno nije podržano.",
-        "oldElectronClientDescription1": "Čini se da koristiš staru verziju klijenta Jitsi Meet koja ima poznate sigurnosne probleme. Obavezno aktualiziraj na našu ",
+        "oldElectronClientDescription1": "Čini se da koristiš staru verziju klijenta ClubApp Meet koja ima poznate sigurnosne probleme. Obavezno aktualiziraj na našu ",
         "oldElectronClientDescription2": "najnoviju verziju",
         "oldElectronClientDescription3": " sada!",
         "participantWantsToJoin": "Želi se pridružiti sastanku",
@@ -1331,15 +1331,15 @@
         "go": "KRENI",
         "goSmall": "KRENI",
         "headerSubtitle": "Sigurni sastanci viskoke kvalitete",
-        "headerTitle": "Jitsi Meet",
+        "headerTitle": "ClubApp Meet",
         "info": "informacije zvanih brojeva",
-        "jitsiOnMobile": "Jitsi na mobilnim uređajima – preuzmi naše aplikacije i započni sastanak od kuda god želiš",
+        "jitsiOnMobile": "ClubApp na mobilnim uređajima – preuzmi naše aplikacije i započni sastanak od kuda god želiš",
         "join": "STVORI/PRIDRUŽI SE",
         "logo": {
             "calendar": "Logotip kalendara",
             "desktopPreviewThumbnail": "Minijatura pregleda radne površine",
             "googleLogo": "Google logotip",
-            "logoDeepLinking": "Jitsi meet logotip",
+            "logoDeepLinking": "ClubApp meet logotip",
             "microsoftLogo": "Microsoft logotip",
             "policyLogo": "Logotip politike"
         },
