--- a/lang/main-it.json
+++ b/lang/main-it.json
@@ -82,7 +82,7 @@
     },
     "calendarSync": {
         "addMeetingURL": "Aggiungi un collegamento alla riunione",
-        "confirmAddLink": "Vuoi aggiungere un collegamento Jitsi a questo evento?",
+        "confirmAddLink": "Vuoi aggiungere un collegamento ClubApp a questo evento?",
         "error": {
             "appConfiguration": "L'integrazione del calendario non è configurata correttamente.",
             "generic": "Si è verificato un errore. Controlla le impostazioni del calendario o ricarica la pagina.",
@@ -569,7 +569,7 @@
         "answer": "Rispondi",
         "audioCallTitle": "Chiamata in arrivo",
         "decline": "Respingi",
-        "productLabel": "da Jitsi Meet",
+        "productLabel": "da ClubApp Meet",
         "videoCallTitle": "Videochiamata in arrivo"
     },
     "info": {
@@ -784,7 +784,7 @@
         "dataChannelClosedWithAudio": "La qualità audio e video potrebbe essere scarsa",
         "disabledIframe": "L'incorporamento serve solo come dimostrazione, quindi questa chiamata si disconnetterà tra {{timeout}} minuti.",
         "disabledIframeSecondaryNative": "L'incorporamento {{domain}} serve solo come dimostrazione, quindi questa chiamata si disconnetterà tra {{timeout}} minuti.",
-        "disabledIframeSecondaryWeb": "L'incorporamento {{domain}} serve solo come dimostrazione, quindi questa chiamata si disconnetterà tra {{timeout}} minuti. Si prega di usare <a href='{{jaasDomain}}' rel='noopener noreferrer' target='_blank'>Jitsi as a Service</a> per la produzione di riunioni incorporate!",
+        "disabledIframeSecondaryWeb": "L'incorporamento {{domain}} serve solo come dimostrazione, quindi questa chiamata si disconnetterà tra {{timeout}} minuti. Si prega di usare <a href='{{jaasDomain}}' rel='noopener noreferrer' target='_blank'>ClubApp as a Service</a> per la produzione di riunioni incorporate!",
         "disconnected": "disconnesso",
         "displayNotifications": "Mostra le notifiche per",
         "dontRemindMe": "Non chiederlo più",
@@ -836,7 +836,7 @@
         "noiseSuppressionDesktopAudioDescription": "La cancellazione del rumore non può essere attivata durante la condivisione dell'audio del desktop, disabilitala e riprova.",
         "noiseSuppressionFailedTitle": "Avvio della cancellazione del rumore non riuscito",
         "noiseSuppressionStereoDescription": "La cancellazione del rumore con l'audio stereo non è attualmente supportata.",
-        "oldElectronClientDescription1": "Sembra che tu stia usando una versione obsoleta del client Jitsi Meet, che ha vulnerabilità note. Assicurati di aggiornarlo alla nostra ",
+        "oldElectronClientDescription1": "Sembra che tu stia usando una versione obsoleta del client ClubApp Meet, che ha vulnerabilità note. Assicurati di aggiornarlo alla nostra ",
         "oldElectronClientDescription2": "ultima versione",
         "oldElectronClientDescription3": " ora!",
         "participantWantsToJoin": "Vuole unirsi alla riunione",
@@ -1590,15 +1590,15 @@
         "go": "VAI",
         "goSmall": "VAI",
         "headerSubtitle": "Riunioni sicure e di alta qualità",
-        "headerTitle": "Jitsi Meet",
+        "headerTitle": "ClubApp Meet",
         "info": "Informazioni chiamata",
-        "jitsiOnMobile": "Jitsi su mobile – scarica le nostre applicazioni e dai inizio ad una riunione dovunque tu sia",
+        "jitsiOnMobile": "ClubApp su mobile – scarica le nostre applicazioni e dai inizio ad una riunione dovunque tu sia",
         "join": "CREA/UNISCITI",
         "logo": {
             "calendar": "Logo calendario",
             "desktopPreviewThumbnail": "Miniatura anteprima del desktop",
             "googleLogo": "Logo Google",
-            "logoDeepLinking": "Logo Jitsi meet",
+            "logoDeepLinking": "Logo ClubApp meet",
             "microsoftLogo": "Logo Microsoft",
             "policyLogo": "Logo politica"
         },
